# fe-be-monorepo

./: .gitignore  CLAUDE.md  README.md  setup.sh  start.sh
backend/: .gitignore  pyproject.toml  worker.py  wrangler.toml
backend/app/: agent.py  main.py
frontend/: components.json  eslint.config.mjs  package-lock.json  package.json  wrangler.toml
frontend/src/: middleware.ts
frontend/src/app/: globals.css
frontend/src/app/home/: page.tsx
frontend/src/features/home/components/: chat-container.tsx  chat-header.tsx  chat-input.tsx  chat-provider.tsx  index.ts  loading-message.tsx  message-item.tsx  message-list.tsx  welcome-card.tsx
